// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WalletsGroupHeaderSkeleton > should render 1`] = `
<DocumentFragment>
  <div
    class="flex h-20 items-center px-8 py-4 md:px-4"
    data-testid="WalletsGroupHeaderSkeleton"
  >
    <div
      class="flex h-11 w-11 shrink-0 flex-row items-center justify-center -space-x-1 rounded-xl bg-theme-background bg-clip-padding text-theme-secondary-100 ring-1 ring-theme-secondary-300 dark:bg-theme-background dark:text-theme-secondary-700 dark:ring-theme-secondary-800"
    >
      <span
        aria-busy="true"
        aria-live="polite"
        class="flex w-auto max-w-full items-center overflow-hidden leading-none"
      >
        <span
          class="react-loading-skeleton"
          style="width: 20px; height: 20px;"
        >
          ‌
        </span>
        <br />
      </span>
    </div>
    <div
      class="grow justify-between space-x-3 px-3 py-3"
    >
      <h1
        class="mb-0 text-lg text-theme-secondary-700 dark:text-theme-secondary-700"
        data-testid="header__title"
      >
        <div
          class="flex h-7 items-center"
        >
          <span
            aria-busy="true"
            aria-live="polite"
            class="flex w-auto max-w-full items-center overflow-hidden leading-none"
          >
            <span
              class="react-loading-skeleton"
              style="width: 150px; height: 18px;"
            >
              ‌
            </span>
            <br />
          </span>
        </div>
      </h1>
    </div>
    <div
      class="flex space-x-3"
    >
      <div
        class="flex flex-col space-y-1 border-r border-theme-secondary-300 pr-4 text-right font-semibold dark:border-theme-secondary-800"
      >
        <span
          class="whitespace-nowrap text-sm text-theme-secondary-700 dark:text-theme-secondary-500"
        >
          Wallets
        </span>
        <span
          class="text-lg text-theme-secondary-600 dark:text-theme-secondary-700"
        >
          <div
            class="flex items-center justify-end sm:h-6"
          >
            <span
              aria-busy="true"
              aria-live="polite"
              class="flex w-auto max-w-full items-center overflow-hidden leading-none"
            >
              <span
                class="react-loading-skeleton sm:h-4.5"
                style="width: 60px;"
              >
                ‌
              </span>
              <br />
            </span>
          </div>
        </span>
      </div>
      <div
        class="flex flex-col space-y-1 border-r border-theme-secondary-300 pr-4 text-right font-semibold dark:border-theme-secondary-800"
      >
        <span
          class="whitespace-nowrap text-sm text-theme-secondary-700 dark:text-theme-secondary-500"
        >
          Total Balance
        </span>
        <span
          class="text-lg text-theme-secondary-600 dark:text-theme-secondary-700"
        >
          <div
            class="flex items-center justify-end sm:h-6"
          >
            <span
              aria-busy="true"
              aria-live="polite"
              class="flex w-auto max-w-full items-center overflow-hidden leading-none"
            >
              <span
                class="react-loading-skeleton sm:h-4.5"
                style="width: 160px;"
              >
                ‌
              </span>
              <br />
            </span>
          </div>
        </span>
      </div>
      <div
        class="flex flex-col space-y-1 border-r border-theme-secondary-300 pr-4 text-right font-semibold dark:border-theme-secondary-800 hidden lg:flex"
      >
        <span
          class="whitespace-nowrap text-sm text-theme-secondary-700 dark:text-theme-secondary-500"
        >
          Total Currency
        </span>
        <span
          class="text-lg text-theme-secondary-600 dark:text-theme-secondary-700"
        >
          <div
            class="flex items-center justify-end sm:h-6"
          >
            <span
              aria-busy="true"
              aria-live="polite"
              class="flex w-auto max-w-full items-center overflow-hidden leading-none"
            >
              <span
                class="react-loading-skeleton sm:h-4.5"
                style="width: 130px;"
              >
                ‌
              </span>
              <br />
            </span>
          </div>
        </span>
      </div>
    </div>
    <div
      class="flex h-full items-center border-theme-secondary-300 pl-4 dark:border-theme-secondary-800 dark:group-hover:border-theme-secondary-700"
    >
      <div
        class="flex h-8 w-8 content-center items-center justify-center rounded-lg bg-theme-background text-theme-secondary-500 ring-1 ring-theme-secondary-300 dark:text-theme-secondary-700 dark:ring-theme-secondary-800"
      >
        <div>
          <div
            style="height: 10px; width: 10px;"
          >
            <svg
              id="chevron-down-small"
              style="height: 100%; width: 100%;"
              viewBox="0 0 10 10"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <path
                d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WalletsGroupHeaderSkeleton > should render as placeholder 1`] = `
<DocumentFragment>
  <div
    class="flex h-20 items-center px-8 py-4 md:px-4"
    data-testid="WalletsGroupHeaderSkeleton"
  >
    <div
      class="flex h-11 w-11 shrink-0 flex-row items-center justify-center -space-x-1 rounded-xl bg-theme-background bg-clip-padding text-theme-secondary-100 ring-1 ring-theme-secondary-300 dark:bg-theme-background dark:text-theme-secondary-700 dark:ring-theme-secondary-800"
    >
      <span
        aria-busy="true"
        aria-live="polite"
        class="flex w-auto max-w-full items-center overflow-hidden leading-none"
      >
        <span
          class="react-loading-skeleton"
          style="width: 20px; height: 20px;"
        >
          ‌
        </span>
        <br />
      </span>
    </div>
    <div
      class="grow justify-between space-x-3 px-3 py-3"
    >
      <h1
        class="mb-0 text-lg text-theme-secondary-700 dark:text-theme-secondary-700"
        data-testid="header__title"
      >
        <div
          class="flex h-7 items-center"
        >
          <span
            aria-busy="true"
            aria-live="polite"
            class="flex w-auto max-w-full items-center overflow-hidden leading-none"
          >
            <span
              class="react-loading-skeleton"
              style="width: 150px; height: 18px;"
            >
              ‌
            </span>
            <br />
          </span>
        </div>
      </h1>
    </div>
    <div
      class="flex space-x-3"
    >
      <div
        class="flex flex-col space-y-1 border-r border-theme-secondary-300 pr-4 text-right font-semibold dark:border-theme-secondary-800"
      >
        <span
          class="whitespace-nowrap text-sm text-theme-secondary-700 dark:text-theme-secondary-500"
        >
          Wallets
        </span>
        <span
          class="text-lg text-theme-secondary-600 dark:text-theme-secondary-700"
        >
          <div
            class="flex items-center justify-end sm:h-6"
          >
            <span
              aria-busy="true"
              aria-live="polite"
              class="flex w-auto max-w-full items-center overflow-hidden leading-none"
            >
              <span
                class="react-loading-skeleton sm:h-4.5"
                style="width: 60px;"
              >
                ‌
              </span>
              <br />
            </span>
          </div>
        </span>
      </div>
      <div
        class="flex flex-col space-y-1 border-r border-theme-secondary-300 pr-4 text-right font-semibold dark:border-theme-secondary-800"
      >
        <span
          class="whitespace-nowrap text-sm text-theme-secondary-700 dark:text-theme-secondary-500"
        >
          Total Balance
        </span>
        <span
          class="text-lg text-theme-secondary-600 dark:text-theme-secondary-700"
        >
          <div
            class="flex items-center justify-end sm:h-6"
          >
            <span
              aria-busy="true"
              aria-live="polite"
              class="flex w-auto max-w-full items-center overflow-hidden leading-none"
            >
              <span
                class="react-loading-skeleton sm:h-4.5"
                style="width: 160px;"
              >
                ‌
              </span>
              <br />
            </span>
          </div>
        </span>
      </div>
      <div
        class="flex flex-col space-y-1 border-r border-theme-secondary-300 pr-4 text-right font-semibold dark:border-theme-secondary-800 hidden lg:flex"
      >
        <span
          class="whitespace-nowrap text-sm text-theme-secondary-700 dark:text-theme-secondary-500"
        >
          Total Currency
        </span>
        <span
          class="text-lg text-theme-secondary-600 dark:text-theme-secondary-700"
        >
          <div
            class="flex items-center justify-end sm:h-6"
          >
            <span
              aria-busy="true"
              aria-live="polite"
              class="flex w-auto max-w-full items-center overflow-hidden leading-none"
            >
              <span
                class="react-loading-skeleton sm:h-4.5"
                style="width: 130px;"
              >
                ‌
              </span>
              <br />
            </span>
          </div>
        </span>
      </div>
    </div>
    <div
      class="flex h-full items-center border-theme-secondary-300 pl-4 dark:border-theme-secondary-800 dark:group-hover:border-theme-secondary-700"
    >
      <div
        class="flex h-8 w-8 content-center items-center justify-center rounded-lg bg-theme-background text-theme-secondary-500 ring-1 ring-theme-secondary-300 dark:text-theme-secondary-700 dark:ring-theme-secondary-800"
      >
        <div>
          <div
            style="height: 10px; width: 10px;"
          >
            <svg
              id="chevron-down-small"
              style="height: 100%; width: 100%;"
              viewBox="0 0 10 10"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <path
                d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WalletsGroupHeaderSkeleton > should render responsive 1`] = `
<DocumentFragment>
  <div
    class="flex h-20 items-center px-8 py-4 md:px-4"
    data-testid="WalletsGroupHeaderSkeleton"
  >
    <div
      class="flex h-11 w-11 shrink-0 flex-row items-center justify-center -space-x-1 rounded-xl bg-theme-background bg-clip-padding text-theme-secondary-100 ring-1 ring-theme-secondary-300 dark:bg-theme-background dark:text-theme-secondary-700 dark:ring-theme-secondary-800"
    >
      <span
        aria-busy="true"
        aria-live="polite"
        class="flex w-auto max-w-full items-center overflow-hidden leading-none"
      >
        <span
          class="react-loading-skeleton"
          style="width: 20px; height: 20px;"
        >
          ‌
        </span>
        <br />
      </span>
    </div>
    <div
      class="grow justify-between space-x-3 px-3 py-3"
    >
      <h1
        class="mb-0 text-lg text-theme-secondary-700 dark:text-theme-secondary-700"
        data-testid="header__title"
      >
        <div
          class="flex h-7 items-center"
        >
          <span
            aria-busy="true"
            aria-live="polite"
            class="flex w-auto max-w-full items-center overflow-hidden leading-none"
          >
            <span
              class="react-loading-skeleton"
              style="width: 150px; height: 18px;"
            >
              ‌
            </span>
            <br />
          </span>
        </div>
      </h1>
    </div>
    <div
      class="flex h-10 flex-col items-end justify-between"
    >
      <span
        aria-busy="true"
        aria-live="polite"
        class="flex w-auto max-w-full items-center overflow-hidden leading-none"
      >
        <span
          class="react-loading-skeleton"
          style="width: 90px; height: 14px;"
        >
          ‌
        </span>
        <br />
      </span>
      <span
        aria-busy="true"
        aria-live="polite"
        class="flex w-auto max-w-full items-center overflow-hidden leading-none"
      >
        <span
          class="react-loading-skeleton"
          style="width: 50px; height: 12px;"
        >
          ‌
        </span>
        <br />
      </span>
    </div>
    <div
      class="flex h-full items-center border-theme-secondary-300 pl-4 dark:border-theme-secondary-800 dark:group-hover:border-theme-secondary-700"
    >
      <div
        class="flex h-8 w-8 content-center items-center justify-center rounded-lg bg-theme-background text-theme-secondary-500 ring-1 ring-theme-secondary-300 dark:text-theme-secondary-700 dark:ring-theme-secondary-800"
      >
        <div>
          <div
            style="height: 10px; width: 10px;"
          >
            <svg
              id="chevron-down-small"
              style="height: 100%; width: 100%;"
              viewBox="0 0 10 10"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <path
                d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WalletsGroupHeaderSkeleton > should render responsive as placeholder 1`] = `
<DocumentFragment>
  <div
    class="flex h-20 items-center px-8 py-4 md:px-4"
    data-testid="WalletsGroupHeaderSkeleton"
  >
    <div
      class="flex h-11 w-11 shrink-0 flex-row items-center justify-center -space-x-1 rounded-xl bg-theme-background bg-clip-padding text-theme-secondary-100 ring-1 ring-theme-secondary-300 dark:bg-theme-background dark:text-theme-secondary-700 dark:ring-theme-secondary-800"
    >
      <span
        aria-busy="true"
        aria-live="polite"
        class="flex w-auto max-w-full items-center overflow-hidden leading-none"
      >
        <span
          class="react-loading-skeleton"
          style="width: 20px; height: 20px;"
        >
          ‌
        </span>
        <br />
      </span>
    </div>
    <div
      class="grow justify-between space-x-3 px-3 py-3"
    >
      <h1
        class="mb-0 text-lg text-theme-secondary-700 dark:text-theme-secondary-700"
        data-testid="header__title"
      >
        <div
          class="flex h-7 items-center"
        >
          <span
            aria-busy="true"
            aria-live="polite"
            class="flex w-auto max-w-full items-center overflow-hidden leading-none"
          >
            <span
              class="react-loading-skeleton"
              style="width: 150px; height: 18px;"
            >
              ‌
            </span>
            <br />
          </span>
        </div>
      </h1>
    </div>
    <div
      class="flex h-10 flex-col items-end justify-between"
    >
      <span
        aria-busy="true"
        aria-live="polite"
        class="flex w-auto max-w-full items-center overflow-hidden leading-none"
      >
        <span
          class="react-loading-skeleton"
          style="width: 90px; height: 14px;"
        >
          ‌
        </span>
        <br />
      </span>
      <span
        aria-busy="true"
        aria-live="polite"
        class="flex w-auto max-w-full items-center overflow-hidden leading-none"
      >
        <span
          class="react-loading-skeleton"
          style="width: 50px; height: 12px;"
        >
          ‌
        </span>
        <br />
      </span>
    </div>
    <div
      class="flex h-full items-center border-theme-secondary-300 pl-4 dark:border-theme-secondary-800 dark:group-hover:border-theme-secondary-700"
    >
      <div
        class="flex h-8 w-8 content-center items-center justify-center rounded-lg bg-theme-background text-theme-secondary-500 ring-1 ring-theme-secondary-300 dark:text-theme-secondary-700 dark:ring-theme-secondary-800"
      >
        <div>
          <div
            style="height: 10px; width: 10px;"
          >
            <svg
              id="chevron-down-small"
              style="height: 100%; width: 100%;"
              viewBox="0 0 10 10"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <path
                d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
